fix portfolio visibility on animation

--- a/src/app/components/portfolio/portfolio.component.scss
+++ b/src/app/components/portfolio/portfolio.component.scss
@@ -107,6 +107,7 @@
         position: absolute;
         bottom: 0;
         left: 0;
+        z-index: -3;
         width: calc(100vw - 208px);
         height: 4px;
         background-color: $gray;
@@ -128,7 +129,8 @@
     pointer-events: none;
     position: absolute;
     top: 0;
-    z-index: 105;
+    // z-index: 105;
+    z-index: -1;
 
     width: 612px;
 
